Creado mediante Colaboratory

--- a/Laboratorio_1.ipynb
+++ b/Laboratorio_1.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mdanielaao/Acevedo-Ocampo-1/blob/main/Laboratorio_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mdanielaao/LAB-1/blob/Acevedo/Laboratorio_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -36,6 +36,29 @@
       "metadata": {
         "id": "NvnkAha2Wjsa"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"hola\")"
+      ],
+      "metadata": {
+        "id": "7O0RLo93uTiU",
+        "outputId": "117552a0-1d36-4242-a578-a0c028f67db4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hola\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
