--- a/Laboratorio_1.ipynb
+++ b/Laboratorio_1.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mdanielaao/Acevedo-Ocampo-1/blob/main/Laboratorio_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mdanielaao/LAB-1/blob/P%C3%A9rez/Laboratorio_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -48,11 +48,22 @@
         "\n",
         "**Número del grupo**\n",
         "\n",
-        "*8*\n"
+        "*Escribir el número del grupo*\n"
       ],
       "metadata": {
         "id": "mPcqihmgaplt"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (\"lab 1\")"
+      ],
+      "metadata": {
+        "id": "BPHhhG1suvLM"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
