Creado mediante Colaboratory

--- a/Laboratorio_1.ipynb
+++ b/Laboratorio_1.ipynb
@@ -40,11 +40,12 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"hola\")"
+        "print(\"hola\")\n",
+        "print(\"Este cambio fue hecho por Daniela Acevedo\")"
       ],
       "metadata": {
         "id": "7O0RLo93uTiU",
-        "outputId": "117552a0-1d36-4242-a578-a0c028f67db4",
+        "outputId": "1295d05f-5e03-413a-b077-6804b96c00dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -55,7 +56,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hola\n"
+            "hola\n",
+            "Este cambio fue hecho por Daniela Acevedo\n"
           ]
         }
       ]
