--- a/Laboratorio_1.ipynb
+++ b/Laboratorio_1.ipynb
@@ -66,6 +66,17 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "print (\"Este cambio fue hecho por Perez\")"
+      ],
+      "metadata": {
+        "id": "OGlHEIoavy55"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# **1. ChatGPT**\n",
